[package]

name = "lua"
version = "0.0.11"
authors = ["J.C. Moyer"]
description = "Bindings to Lua 5.3"
documentation = "https://docs.rs/lua"
repository = "https://github.com/jcmoyer/rust-lua53"
readme = "README.md"
keywords = [
  "lua", "lua53", "rust-lua53", "bindings"
]
license = "MIT"
build = "build.rs"

[build-dependencies]
cc = "1.0.72"
bindgen = "0.59.2"

[dependencies]
bitflags = "0.1"
libc = "0.2.112"

[features]
# Enable this feature if you want to have a statically linked bzip2
static = []
